fix spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -162,6 +162,8 @@
   .forget-password{ 
     font-size: 12px;
     color: #1877f2;
+    display: block;
+    padding-top: 10px;
   }
 
   .button-signup {
